--- a/CatchMe/Views/Admin/AddUser.cshtml
+++ b/CatchMe/Views/Admin/AddUser.cshtml
@@ -23,7 +23,7 @@
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.username, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control typeahead", data_provider="typeahead" } })
                 @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
             </div>
@@ -31,7 +31,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.firstname, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.firstname, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.firstname, "", new { @class = "text-danger" })
             </div>
@@ -39,7 +39,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.lastname, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })
             </div>
@@ -47,7 +47,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.job_title, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.job_title, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.job_title, "", new { @class = "text-danger" })
             </div>
@@ -55,7 +55,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.team, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.team, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.team, "", new { @class = "text-danger" })
             </div>
@@ -63,25 +63,16 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.role, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @*@Html.EditorFor(model => model.role, new { htmlAttributes = new { @class = "form-control" } })*@
-                @Html.DropDownList("role",roles, htmlAttributes: new { @class = "form-control" })
-
+            <div class="col-md-5">
+                @Html.DropDownList("role", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.role, "", new { @class = "text-danger" })
             </div>
         </div>
 
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.num_logins, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.num_logins, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.num_logins, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
+  
         @*<div class="form-group">
             @Html.LabelFor(model => model.is_active, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.is_active)
                     @Html.ValidationMessageFor(model => model.is_active, "", new { @class = "text-danger" })
@@ -91,7 +82,7 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
             </div>
@@ -99,14 +90,14 @@
 
         <div class="form-group">
             @Html.LabelFor(model => model.active_project, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <div class="col-md-5">
                 @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.active_project, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
+            <div class="col-md-offset-2 col-md-5">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </div>
