--- a/CatchMe/Views/Tasks/_EditComment.cshtml
+++ b/CatchMe/Views/Tasks/_EditComment.cshtml
@@ -4,14 +4,14 @@
     ViewBag.Title = "_EditComment";
 }
 
-<h2>_EditComment</h2>
 
-@using (Html.BeginForm("EditComment","Task",FormMethod.Post))
+
+@using (Html.BeginForm("EditComment","Tasks",FormMethod.Post))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>comment</h4>
+        <h4>Edit Comment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.comment_id)
@@ -31,7 +31,9 @@
         <div class="form-group">
             @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control", @id="area2" } })
+                @*@Html.TextAreaFor(model => model.description, new { @class = "form-control", @id="area2" } )*@
+                <textarea name="description" id="area2" cols="20" rows="2" style="width:620px;height:200px" placeholder="comment">@Model.description</textarea>
+
                 @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -44,7 +46,3 @@
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
