--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -142,18 +142,24 @@
                 <section style="display:none" class="section3">
                     <h4><span class="fa fa-history"></span> &nbsp;Task History (@Model.task_hist.Count)</h4>
                     <div class="row">
-                        @{var prevstatus = "none" ;}
+                        @{var prevstatus = "none" ;
+                            var lastTask =  Model.task_hist.OrderBy(x => x.created_on).LastOrDefault();
+                            }
+
                         @foreach (var hist in Model.task_hist.OrderBy(x => x.created_on))
                         {
                                                        
                             if(!prevstatus.Trim().ToUpper().Equals(hist.HistDesc.Trim().ToUpper()) )
                             { 
                             <div class="col-md-2 text-center">
-                                <span class="label label-info">@hist.HistDesc</span>
+                                <span class="label label-@(hist.HistDescLabel)">@hist.HistDesc</span>
                                 <br /><small>@hist.created_on.Value.ToString("dd/MM/yy HH:mm") (@hist.firstname)</small> 
                             </div>
-                            
+                                if(hist!=lastTask)
+                                {
                             <div class="col-md-1"><span class="fa fa-2x fa-long-arrow-right"></span></div>
+
+                                }
                             
                             }
 
