--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -26,16 +26,19 @@
                     
                     <li><a href="@Url.Action("Index","Tasks")" title="Home"><span class="fa fa-15x fa-home"></span> </a></li>
                     <li><a href="@Url.Action("CreateTask","Tasks")" title="create task"><span class="fa fa-15x fa-plus"></span> </a></li>
-                    @if(session.Current.IsAdmin)
-                    {
-                        
-                    <li><a href="@Url.Action("Index","Admin")" title="Admin"><span class="fa fa-15x fa-wrench"></span> </a></li>                    
-                        
-                    }
+                   
                     <li><a href="@Url.Action("Index","Stats")" title="Admin"><span class="fa fa-15x fa-line-chart"></span> </a></li>
 
                 </ul>                
-                <p class="nav navbar-text navbar-right">Hello, @session.Current.Firstname!</p>
+                <p class="nav navbar-text navbar-right">
+                    
+                @if (session.Current.IsAdmin)
+                {
+                    <a href="@Url.Action("Index","Admin")" title="Admin"><span class="fa fa-15x fa-wrench"></span></a>@:&nbsp;
+                }
+                    Hello, @session.Current.Firstname!
+                
+                </p>
             </div>
         </div>
     </div>
