--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -201,7 +201,8 @@
             <br /><br />
             @foreach (var comment in Model.comments.OrderByDescending(x=>x.created_on))
             {
-                <div class="task-title">@comment.title - </div>
+              
+                  <div class="task-title"><span class="fa fa-play"></span> @(string.IsNullOrWhiteSpace(comment.title)?"No Title..":comment.title) - </div>
                 <small>@comment.user.fullname on @comment.created_on.Value.ToString("dd MMM yyyy HH:mm")</small>
                 <h4 style="word-break:break-all">
 
@@ -209,12 +210,13 @@
                         @Html.Raw(comment.description.Replace(Environment.NewLine, "<br/>"))
                     </span>
                 </h4>
-                
-                if(session.Current.IsAdmin || session.Current.UserId == comment.user_id || !is_readonly)
+
+                if (session.Current.IsAdmin || session.Current.UserId == comment.user_id || !is_readonly)
                 {
-                    <a href="#" class="shownextsection"><span class="fa fa-edit"></span><small>&nbsp;Edit</small></a>
+                    
+                    <a href="javascript:void(0);" class="shownextsection"><span class="fa fa-edit"></span><small>&nbsp;Edit</small></a>
                 }
-    
+
                 <section style="display:none" >
                     @Html.Partial("_EditComment",comment)
                 </section>
