--- a/CatchMe/Views/Tasks/TaskList.cshtml
+++ b/CatchMe/Views/Tasks/TaskList.cshtml
@@ -16,7 +16,7 @@
     <div class="pull-left"><h2>@session.Current.CurrentProject</h2></div>
     <div class="pull-right" style="margin-top:20px;">
         <span class="text-muted">change project:</span>
-        @if (session.Current.MyProjects.Count() > 1)
+        @if (session.Current.MyProjects != null && session.Current.MyProjects.Count() > 1)
         {
             @Html.DropDownList("project_id", null, htmlAttributes: new { @class = "projectselect pull-right changeproject" })
         }
@@ -98,7 +98,7 @@
 
                             </td>
                             <td>
-                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.fullname; }
+                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
                                 @assignee
                             </td>
                             <td>
@@ -168,7 +168,7 @@
 
                             </td>
                             <td>
-                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.fullname; }
+                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
                                 @assignee
                             </td>
                             <td>
@@ -238,7 +238,7 @@
 
                             </td>
                             <td>
-                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.fullname; }
+                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
                                 @assignee
                             </td>
                             <td>
@@ -310,7 +310,7 @@
 
                             </td>
                             <td>
-                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.fullname; }
+                                @{ var assignee = item.user.user_id == 0 ? "Unassigned" : item.user.firstname; }
                                 @assignee
                             </td>
                             <td>
